# aiassisted

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  FEATURES.md  LICENSE  MIGRATION.md  Makefile  README.md  dist-workspace.toml  install.sh
.aiassisted/: .version  FILES.txt  config.toml.default  manifest.json
.aiassisted/config/: README.md
.aiassisted/instructions/: ai-prompt-engineering-safety-best-practices.instructions.md  conventional-commits.instructions.md  multi-project-memory-bank.instructions.md  rust.instructions.md  setup-agents-context.instructions.md
.aiassisted/prompts/: git.commit.prompt.md
.aiassisted/templates/: README.md
plans/: README.md  overview.md  phase-1-setup.md  phase-2-cli.md  phase-3-content.md  phase-4-templates.md  phase-5-config.md  phase-6-selfupdate.md  phase-7-distribution.md  phase-8-polish.md  tui-integration.md
plans/skills-refactor/: README.md  phase-1-cli.md  phase-2-core.md  phase-3-skills-module.md  phase-4-main.md  phase-5-cleanup.md  phase-6-content.md  phase-7-tests.md  phase-8-docs.md
scripts/: quick-test.sh  smoke-test.sh  update-version.sh
src/: cli.rs  lib.rs  main.rs
src/agents/: commands.rs  compiler.rs  diff.rs  discovery.rs  mod.rs  parser.rs  validator.rs
src/bun/: package.json  tsconfig.json
src/config/: commands.rs  mod.rs  settings.rs  toml_store.rs
src/content/: commands.rs  github.rs  manifest.rs  mod.rs  sync.rs
src/core/: config.rs  content.rs  infra.rs  mod.rs  selfupdate.rs  (+2 more)
src/python/: pyproject.toml
src/python/aiassisted/: __init__.py  __main__.py  cli.py  downloader.py  installer.py  manifest.py
templates/: README.md
tests/: config_integration.rs  content_integration.rs  migration_integration.rs  templates_integration.rs
(+97 files in other folders)
