[project]
name = "aiassisted"
version = "2.0.0"
description = "AI-Assisted Engineering Guidelines Installer"
readme = "../../README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
]

[project.scripts]
aiassisted-python = "aiassisted.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
